--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,10 +2,10 @@
 @import 'normalize.scss';
 
 //login
-@import './components/login.scss';
+// @import './components/login.scss';
 
 //admin
-@import './components/admin/sidebar.scss';
+// @import './components/admin/sidebar.scss';
 @import './components/admin/main.scss';
 @import './components/admin/header.scss';
 @import './components/admin/calendar.scss';
