update to new model

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,10 +6,10 @@
 
 //admin
 // @import './components/admin/sidebar.scss';
-@import './components/admin/main.scss';
-@import './components/admin/header.scss';
-@import './components/admin/calendar.scss';
+// @import './components/admin/main.scss';
+// @import './components/admin/header.scss';
+// @import './components/admin/calendar.scss';
 @import './components/admin/react-big-calendar.scss';
-@import './components/admin/new-event.scss';
-@import './components/admin/modal.scss';
+// @import './components/admin/new-event.scss';
+// @import './components/admin/modal.scss';
 @import './components/admin/home.scss';
