--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 //base
 @import 'normalize.scss';
+@import './variables.scss';
 
 //login
 // @import './components/login.scss';
@@ -12,4 +13,4 @@
 @import './components/admin/react-big-calendar.scss';
 // @import './components/admin/new-event.scss';
 // @import './components/admin/modal.scss';
-@import './components/admin/home.scss';
+// @import './components/admin/home.scss';
