--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,5 @@
-@import '../../styles/style.scss';
+@import "../../styles/style.scss";
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 .home {
     display: grid;
@@ -8,134 +9,48 @@
     width: 100%;
     height: 100%;
     // overflow: hidden;
+
+    &__s1 {
+        grid-area: posting;
+        width: 100%;
+        height: 100%;
+        border: 5px solid crimson;
+        padding: 5px;
+        // overflow: scroll;
+
+        h1 {
+            font-family: "Oswald", sans-serif;
+            color: crimson;
+        }
+
+        &-post {
+            // outline: 1px solid black;
+            padding: 5px;
+            position: relative;
+        }
+
+        &-feed {
+            display: flex;
+            width: 100%;
+            height: 350px;
+            flex-wrap: wrap;
+            padding: 10px;
+            overflow: auto;
+        }
+    }
+
+    &__s2 {
+        width: 100%;
+        height: 100%;
+        border: 5px dashed crimson;
+        grid-area: event1;
+    }
+
+    &__s3 {
+        width: 100%;
+        height: 100%;
+        background: rgb(51, 141, 153);
+        grid-area: event2;
+    }
 }
 
-.home__s1 {
-    grid-area: posting;
-    width: 100%;
-    height: 100%;
-    border: 5px solid crimson;
-    padding: 5px;
-    // overflow: scroll;
-}
-
-.home__s1-post {
-    // outline: 1px solid black;
-    padding: 5px;
-    position: relative;
-}
-
-.home__s1-post-textbox {
-    width: 80%;
-    outline: none;
-    border: none;
-    border-bottom: 1.5px solid #ffffff;
-    background: #e7e7e7;
-    border-radius: 0 5px 0 5px;
-    padding: 5px;
-    resize: none;
-}
-
-
-.home__s1-post-textbox:hover {
-    outline: 1.5px solid #dc143c;
-    box-shadow: 0px 0px 5px 0px crimson;
-}
-
-.home__s1-post-textbox:focus {
-    outline: 1.5px solid #dc143c;
-    box-shadow: 0px 0px 5px 2px crimson;
-    transition: box-shadow .5s ease-out;
-}
-
-.home__s1-post-btn {
-    position: absolute;
-    top: 0;
-    margin-left: 5px;
-    margin-top: 5px;
-    width: 19%;
-    height: 65px;
-    
-    background: #dc143c;
-    color: #fff;
-    border: none;
-    border-radius:  5px 0 5px 0;
-    transition: background .5s ease-out;
-}
-
-.home__s1-post-btn:hover {
-    color: #dc143c;
-    outline: 1.5px solid #dc143c;
-    background: #fff;
-    box-shadow: 0px 0px 5px 2px crimson;
-}
-
-.home__s1-feed {
-    display: flex;
-    width: 100%;
-    height: 350px;
-    flex-wrap: wrap;
-    padding: 10px;
-    overflow: auto;
-}
-
-.home__s1-feed-post {
-    position: relative;
-    width: 100%;
-    height: 70px;
-    // outline: 1px solid black;
-    margin-bottom: 5px;
-    background: rgb(199, 199, 199);
-    border-radius: 0 5px 5px 0;
-    overflow: hidden;
-}
-
-.home__s1-feed-post-avatar {
-    position: absolute;
-    clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-    width: 100px;
-    height: 100%;
-    object-fit: cover;
-    
-}
-
-.home__s1-feed-post-title {
-    display: block;
-    margin-left: 100px;
-    align-content: center; 
-}
-
-.home__s1-feed-post-msg {
-    margin-left: 100px;
-    padding: 3px;
-    width: 75%;
-    height: 100%;
-    // background: red;
-    overflow: auto;
-}
-
-.home__s1-feed-post-msg-txt {
-    align-content: justify; 
-    font-size: 4px;
-}
-
-.home__s1-feed-post-time {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin-right: 5px;
-}
-
-.home__s2 {
-    width: 100%;
-    height: 100%;
-    background: rebeccapurple;
-    grid-area: event1;
-}
-
-.home__s3 {
-    width: 100%;
-    height: 100%;
-    background: rgb(51, 141, 153);
-    grid-area: event2;
-}
