--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,3 +8,7 @@ $font-info: 'Open Sans Condensed', sans-serif;
 $font-info-time: 'Island Moments', cursive;
 
 //COLORS
+$color-first: #dc143c; 
+
+//borders
+$border-kurenai: 0px 0px 10px 5px #dc143c;
