--- a/src/components/admin/Home/LastEventAdded/LastEventAdded.scss
+++ b/src/components/admin/Home/LastEventAdded/LastEventAdded.scss
@@ -2,10 +2,10 @@
 
 .last-event-added {
     width: 100%;
+    height: 100%;
     color: #fff;
-    padding: 10px;
+    padding: 1rem;
     font-family: $font-title;
-    
 
     &__title {
         font-family: $font-title;
@@ -19,6 +19,7 @@
         margin-top: 10px;
         overflow-y: auto;
         height: 200px;
+        padding: .3rem;
         
         
         &-index {
@@ -26,13 +27,19 @@
             line-height: 1px;
             font-size: 13px;
             padding: 5px 10px;
-            width: 95%;
+            width: 100%;
             height: 70px;
             background-color: crimson;
             border-radius: 5px;
             border-bottom: 1px solid #000;
             border-right: 1px solid #000;
             margin-bottom: 10px;
+
+            &:hover {
+                opacity: .7;
+                box-shadow: 0 0 1px 4px rgb(220, 20, 60);
+                cursor: pointer;
+            }
 
             &-avatar {
                 position: absolute;
