--- a/src/components/admin/Home/Post/PostList/PostList.scss
+++ b/src/components/admin/Home/Post/PostList/PostList.scss
@@ -1,10 +1,13 @@
-@import "../../../../styles/style.scss";
+@import "../../../../../styles/style.scss";
 
 
 .post-list {
 
     height: 100%;
     width: 100%;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     &__box {
         position: relative;
