--- a/src/components/admin/menu/Header/Banner/Banner.scss
+++ b/src/components/admin/menu/Header/Banner/Banner.scss
@@ -9,21 +9,20 @@
     overflow: hidden;
     padding: 10px;
 
-    &__avatar {
+    &__box {
         width: 150px;
         height: 100%;
-
+        cursor: pointer;
         overflow: hidden;
         outline: 5px solid #dc143c;
         box-shadow: 0px 0px 5px 4px #dc143c;
-        // position: relative;
-        // clip-path: circle(40.7% at 50% 50%);
-        // margin-bottom: 10px;
-        // overflow: hidden;
 
-        img {
-            width: inherit;
-            object-fit: cover;
+        &-avatar {
+            width: 100%;
+            height: 100%;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
