--- a/src/components/admin/menu/Header/Header.scss
+++ b/src/components/admin/menu/Header/Header.scss
@@ -2,23 +2,22 @@
 
 .header {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 100%;
     width: 100%;
     height: 100%;
     overflow: hidden;
     gap: 10px;
+
+    // &__first {
+    //     grid-column: 1/2;
+    // }    
+    // &__second {
+    //     grid-column: 2/3;
+    // }    
+    // &__third {
+    //     grid-column: 3/4;
+    // }
 }
 
 
-
-.header__secondary {
-    width: 100%;
-    height: 100%;
-}
-
-.header__secondary-actions {
-    background: rgb(13, 118, 136);
-    width: inherit;
-    height: inherit;
-}
