--- a/src/components/admin/menu/Sidebar/Sidebar.scss
+++ b/src/components/admin/menu/Sidebar/Sidebar.scss
@@ -14,13 +14,13 @@
     position: relative;
     overflow: hidden;
 
-    .sidebar__icon-group {
+    &__icon-group {
         // width: 0px;
         height: 60px;
         transition: all 0.5s linear;
     }
 
-    .sidebar__icon-group-logout {
+    &__icon-group-logout {
         width: inherit;
         height: 60px;
         transition: all 0.5s linear;
@@ -37,18 +37,19 @@
     //     color: #fff;
     // }
 
-    .sidebar__icon {
+    &__icon {
         // width: 50px;
         font-size: 25px;
         color: #fff;
         margin: 15px 15px;
     }
 
-    .sidebar__icon-calendar {
+    &__icon-calendar {
         font-size: 31px;
+        margin-right: .12rem;
     }
 
-    .sidebar__icon:hover {
+    &__icon:hover {
         color: #dcc814;
     }
 }
