--- a/src/components/auth/LoginForm.scss
+++ b/src/components/auth/LoginForm.scss
@@ -1,6 +1,7 @@
 @import '../../styles/style.scss';
 
 .login-form {
+    font-family: $font-title;
     display: block;
     padding: 15px;
     margin-top: 50px;
@@ -9,7 +10,12 @@
         display: inherit;
 
         &-alert {
-            color: #fa0000;
+            display: block;
+            color: #fff;
+            background: red;
+            transition: all 0.5s ease;
+            width: 25%;
+            border-radius: 0 5px 0 0;
         }
 
         &-text {
@@ -17,10 +23,22 @@
         }
 
         input {
+            padding: 0 1.5rem;
+            letter-spacing: .2rem;
+            font-family: $font-info;
             display: inherit;
             margin-bottom: 15px;
             width: 100%;
             height: 40px;
+            border: none;
+            border: .1rem solid $color-first;
+            border-radius: 3px;
+
+            &:focus {
+                outline: .2rem solid #dcd50d;
+                border: none;
+                
+            }
         }
     }
 
