--- a/src/layouts/LayoutBasic.scss
+++ b/src/layouts/LayoutBasic.scss
@@ -52,7 +52,9 @@
     background: #fff;
     width: 100%;
     height: 100%;
+    min-height: 30rem;
     box-shadow: 1px 1px 15px 1px #dc143c;
+    overflow: hidden;
     // margin: 5px;
     // margin-bottom: 15px;
 }
