--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,8 +3,8 @@
 
 .home {
     display: grid;
-    grid-template-columns: 1fr 300px;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 30rem;
+    grid-template-rows: .7fr 1.3fr;
     grid-template-areas: "posting event1" "posting event2";
     width: 100%;
     height: 100%;
@@ -12,44 +12,18 @@
 
     &__s1 {
         grid-area: posting;
-        width: 100%;
-        height: 100%;
-        border: 5px solid crimson;
-        padding: 5px;
-        // overflow: scroll;
-
-        h1 {
-            font-family: "Oswald", sans-serif;
-            color: crimson;
-        }
-
-        &-post {
-            // outline: 1px solid black;
-            padding: 5px;
-            position: relative;
-        }
-
-        &-feed {
-            display: flex;
-            width: 100%;
-            height: 350px;
-            flex-wrap: wrap;
-            padding: 10px;
-            overflow: auto;
-        }
+        // border: 5px solid crimson;
     }
 
     &__s2 {
         width: 100%;
         height: 100%;
-        border: 5px dashed crimson;
         grid-area: event1;
     }
 
     &__s3 {
         width: 100%;
         height: 100%;
-        background: rgb(51, 141, 153);
         grid-area: event2;
     }
 }
