--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -13,6 +13,7 @@
 
  html {
     line-height: 1.15; /* 1 */
+    font-size: 62.5%; //now 1rem is 10px
     -webkit-text-size-adjust: 100%; /* 2 */
   }
   
@@ -351,3 +352,37 @@
     display: none;
   }
   
+
+  /* Modal */
+.ReactModalPortal > div{
+  opacity: 0;
+}
+
+.ReactModalPortal .ReactModal__Overlay {
+  width: 100vw;
+  height: 100vh;
+  transition: opacity .2s ease-in-out;
+  z-index: 999;
+  
+}
+
+
+
+.modal-fondo {
+  background-color: rgba(0, 0, 0, 0.3);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  position: fixed;
+  
+}
+
+.ReactModalPortal .ReactModal__Overlay--after-open {
+  opacity: 1;
+  
+}
+
+.ReactModalPortal .ReactModal__Overlay--before-close {
+  opacity: 0;
+}
