--- a/src/components/admin/Modal/ModalEvent/ModalEvent.scss
+++ b/src/components/admin/Modal/ModalEvent/ModalEvent.scss
@@ -79,6 +79,7 @@
             background: #fff;
             border-radius: 3px;
             color: crimson;
+            cursor: pointer;
         
             transition: background .3s ease;
             display: flex;
@@ -89,10 +90,14 @@
                 box-shadow: 0px 0px 10px 1px crimson;
             }
 
+            &:disabled {
+                background: rgb(187, 187, 187);
+            }
             
         }
 
         &-btn-edit {
+            cursor: pointer;
             width: 100%;
             height: 100%;
             outline: none;
@@ -112,6 +117,7 @@
         }
 
         &-btn-delete {
+            cursor: pointer;
             width: 100%;
             height: 100%;
             outline: none;
@@ -128,9 +134,14 @@
             &:hover {
                 box-shadow: 0px 0px 10px 1px crimson;
             }
+
+            &:disabled {
+                background: rgb(187, 187, 187);
+            }
         }
 
         &-btn-cancel {
+            cursor: pointer;
             width: 100%;
             height: 100%;
             outline: none;
