Ready for product!

--- a/src/components/admin/User/UserElement/UserElement.scss
+++ b/src/components/admin/User/UserElement/UserElement.scss
@@ -41,6 +41,7 @@
         }
 
         p {
+            text-align: center;
             font-family: $font-info;
             letter-spacing: .25rem;
             font-size: 2rem;
