--- a/src/components/admin/Home/Post/PostList/PostList.scss
+++ b/src/components/admin/Home/Post/PostList/PostList.scss
@@ -12,13 +12,9 @@
     &__box {
         position: relative;
         width: 100%;
-        height: 70px;
-        border-bottom: 1px solid crimson;
-        border-right: 1px solid crimson;;
-        // outline: 1px solid black;
+        height: 7rem;
         margin-bottom: 10px;
-        // background: rgb(199, 199, 199);
-        border-radius: 0 5px 5px 0;
+        box-shadow: .2rem .2rem .5rem  rgb(133, 133, 133);
         overflow: hidden;
         
         img {
@@ -61,13 +57,26 @@
         }
 
         &-time {
-            font-size: 25px;
-            
-            font-family: $font-info-time;
+            font-size: 1.3rem;
+            font-family: $font-info;
             position: absolute;
             bottom: 0;
             right: 0;
             margin-right: 5px;
+        }
+
+        &-delete {
+            font-size: 1.3rem;
+            font-family: $font-info;
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin-right: 5px;
+            cursor: pointer;
+
+            &:hover {
+                color: crimson;
+            }
         }
     }
 }
