--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -11,6 +11,8 @@
     &__title {
         text-align: center;
         margin-bottom: 3rem;
+        font-family: $font-title;
+        color: crimson;
     }
 
     &__box {
