some changes in event forms

--- a/src/components/admin/Modal/ModalEvent/ModalEvent.scss
+++ b/src/components/admin/Modal/ModalEvent/ModalEvent.scss
@@ -46,9 +46,9 @@
                 font-family: $font-info;
                 margin-top: 0;
                 margin-bottom: 0;
-                width: 200px;
-                height: 30px;
-                padding: 5px;
+                width: 20rem;
+                height: 5rem;
+                padding: .5rem;
                 overflow: auto;
                 overflow-x: hidden;
                 text-align: right;
