--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -9,6 +9,7 @@
     width: 100vw;
     height: 100vh;
     gap: 15px;
+    background-color: rgb(35, 31, 31);
 
     &__banner1 {
         grid-column: 2/3;
