--- a/src/components/admin/Event/NewEventForm/NewEventForm.scss
+++ b/src/components/admin/Event/NewEventForm/NewEventForm.scss
@@ -126,12 +126,13 @@
         transition: all 0.5s ease;
         width: 70%;
         border-radius: 0 5px 0 0;
+        font-size: 1.5rem;
     }
 
     &-text {
         display: block;
-        font-size: 0.7rem;
-        font-family: $font-title;
+        font-size: 1.5rem;
+        font-family: $font-info;
     }
 
     &-textarea {
