--- a/src/components/admin/Modal/ModalEvent/ModalEvent.scss
+++ b/src/components/admin/Modal/ModalEvent/ModalEvent.scss
@@ -84,7 +84,8 @@
             transition: background .3s ease;
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: center;
+            align-items: center;
 
             &:hover {
                 box-shadow: 0px 0px 10px 1px crimson;
@@ -108,8 +109,8 @@
         
             transition: background .3s ease;
             display: flex;
-            flex-direction: column;
-            justify-content: space-around;
+            justify-content: center;
+            align-items: center;
 
             &:hover {
                 box-shadow: 0px 0px 10px 1px crimson;
@@ -129,7 +130,8 @@
             transition: background .3s ease;
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: center;
+            align-items: center;
 
             &:hover {
                 box-shadow: 0px 0px 10px 1px crimson;
@@ -153,7 +155,8 @@
             transition: background .3s ease;
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: center;
+            align-items: center;
 
             &:hover {
                 box-shadow: 0px 0px 10px 1px crimson;
