--- a/src/components/admin/Event/EditEventForm/EditEventForm.scss
+++ b/src/components/admin/Event/EditEventForm/EditEventForm.scss
@@ -48,18 +48,18 @@
             grid-row: 1/2;
             width: 100%;
             height: 100%;
-            padding: 10px;
+            padding: 1rem;
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 60px 60px 60px 60px 60px 60px;
 
             &-btn-success {
-                height: 30px;
-                font-size: 0.7rem;
+                height: 3rem;
+                font-size: 1.5rem;
                 background: #fff;
                 color: #3a8b34;
                 border: 1px solid #3a8b34;
-                border-radius: 3px;
+                border-radius: .3rem;
                 transition: all ease 0.5s;
                 cursor: pointer;
 
@@ -73,12 +73,12 @@
             
             
             &-btn-alert {
-                height: 30px;
-                font-size: 0.7rem;
+                height: 3rem;
+                font-size: 1.5rem;
                 background: #fff;
                 color: #8b3434;
                 border: 1px solid #8b3434;
-                border-radius: 3px;
+                border-radius: .3rem;
                 transition: all ease 0.5s;
                 cursor: pointer;
 
