--- a/src/components/admin/menu/Header/Tomorrow/Tomorrow.scss
+++ b/src/components/admin/menu/Header/Tomorrow/Tomorrow.scss
@@ -14,102 +14,148 @@
         font-family: $font-title;
         width: 100%;
         height: 100%;
-        background: #dc143c;
-        background-size: 4px 4px;
-        background-image: repeating-linear-gradient(45deg, #dc143c 0, #dc143c 0.4px, #ac1130da 0, #dc143c 50%);
+        background: #fff;
+        // background-size: 4px 4px;
+        // background-image: repeating-linear-gradient(45deg, #dc143c 0, #dc143c 0.4px, #ac1130da 0, #dc143c 50%);
         text-align: left;
         box-shadow: 0 0 10px 1px #dc143c;
         margin-bottom: 10px;
-        overflow: hidden;
-        cursor: pointer;
-
+        // overflow: hidden;
+        // cursor: pointer;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2rem 1fr;
+        
         &-title {
-            border: 0.3rem solid $color-first;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: none;
-            outline: none;
-            width: 10rem;
-            height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-
-            h1 {
-                font-size: 2.5rem;
-                font-weight: bold;
-                font-family: $font-info;
-                color: #fff;
-                text-align: center;
-            }
+            background: crimson;
+            // background-image: repeating-linear-gradient(45deg, #dc143c 0, #dc143c 0.4px, #ac1130da 0, #dc143c 50%);
+            grid-column: 1/2;
+            grid-row: 1/2;
+            text-align: center;
+            color: #fff;
+            text-transform: uppercase;
         }
 
-        &-event {
-            width: 100%;
-            height: 100%;
+        &-events {
+            grid-column: 1/2;
+            grid-row: 2/3;
             display: flex;
             flex-direction: column;
-            padding: 0 1rem;
-            
+            overflow-y: auto;
+            padding: .5rem;
 
-            &-title {
-                font-family: $font-title;
-                margin: 0;
-                width: 100%;
-                flex-grow: .5;
-                color: #fff;
-                text-align: center;
-            }
 
-            &-info {
+            &-event {
                 width: 100%;
-                flex-grow: 1;
+                height: 2rem;
+                border-radius: .5rem;
                 display: flex;
-                align-items: stretch;
-                padding-left: .3rem;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-bottom: .5rem;
+                color: #fff;
+                padding: 0 .5rem;
 
-                &-first {
-                    width: 50%;               
-                    color: #fff;
-                    
-                    p {
-                        margin: 0;
-                    }
-
+                &:hover {
+                    opacity: 1 !important;
+                    cursor: pointer;
                 }
 
-                &-second {
-                    flex-grow: 6;
-                    width: 50%;
-                    padding: 0 .3rem;
-                    color: #fff;
-
-                    &-estimated {
-                        display: flex;
-                        justify-content: space-between;
-                    }
-
-                    &-contact {
-                        display: flex;
-                        justify-content: space-between;
-                    }
-
-                    p {
-                        margin: 0;
+                label {
+                    &:hover{
+                        cursor: pointer;
                     }
                 }
-            }
-
-            &-free {
-                font-family: $font-info;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: #fff;
             }
         }
+
+        // &-title {
+        //     border: 0.3rem solid $color-first;
+        //     display: flex;
+        //     justify-content: center;
+        //     align-items: center;
+        //     border: none;
+        //     outline: none;
+        //     width: 10rem;
+        //     height: 100%;
+        //     background-position: center;
+        //     background-repeat: no-repeat;
+        //     background-size: cover;
+
+        //     h1 {
+        //         font-size: 2.5rem;
+        //         font-weight: bold;
+        //         font-family: $font-info;
+        //         color: #fff;
+        //         text-align: center;
+        //     }
+        // }
+
+        // &-event {
+        //     width: 100%;
+        //     height: 100%;
+        //     display: flex;
+        //     flex-direction: column;
+        //     padding: 0 1rem;
+            
+
+        //     &-title {
+        //         font-family: $font-title;
+        //         margin: 0;
+        //         width: 100%;
+        //         flex-grow: .5;
+        //         color: #fff;
+        //         text-align: center;
+        //     }
+
+        //     &-info {
+        //         width: 100%;
+        //         flex-grow: 1;
+        //         display: flex;
+        //         align-items: stretch;
+        //         padding-left: .3rem;
+
+        //         &-first {
+        //             width: 50%;               
+        //             color: #fff;
+                    
+        //             p {
+        //                 margin: 0;
+        //             }
+
+        //         }
+
+        //         &-second {
+        //             flex-grow: 6;
+        //             width: 50%;
+        //             padding: 0 .3rem;
+        //             color: #fff;
+
+        //             &-estimated {
+        //                 display: flex;
+        //                 justify-content: space-between;
+        //             }
+
+        //             &-contact {
+        //                 display: flex;
+        //                 justify-content: space-between;
+        //             }
+
+        //             p {
+        //                 margin: 0;
+        //             }
+        //         }
+        //     }
+
+        //     &-free {
+        //         font-family: $font-info;
+        //         width: 100%;
+        //         height: 100%;
+        //         display: flex;
+        //         justify-content: center;
+        //         align-items: center;
+        //         color: #fff;
+        //     }
+        // }
     }
 }
