--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -27,6 +27,16 @@
             border-radius: 5px;
             box-shadow: 3px 3px 10px 3px rgba(3, 3, 3, 0.5);
 
+
+            &-logo {
+                background-image: url('../../assets/kurenaistudio.png');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                width: 100%;
+                height: 10rem;
+            }
+
             h1 {
                 font-family: "Ephesis", cursive;
                 text-align: center;
