--- a/src/components/admin/Event/EditEventForm/EditEventForm.scss
+++ b/src/components/admin/Event/EditEventForm/EditEventForm.scss
@@ -6,21 +6,62 @@
     --form-grid: 70px 70px 70px 70px 70px 70px;
 }
 
-.new-event-form {
+.edit-event-form {
     height: 100%;
     width: 100%;
     display: inherit;
+    position: relative;
+
+    &__btn-success {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 3rem;
+        font-size: 1.5rem;
+        background: #fff;
+        color: #3a8b34;
+        border: 1px solid #3a8b34;
+        border-radius: .3rem;
+        transition: all ease 0.5s;
+        cursor: pointer;
+
+        &:hover {
+            background: #3a8b34;
+            color: #fff;
+            transition: all ease 0.5s;
+        }
+    }
+    
+    &__btn-alert {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 3rem;
+        font-size: 1.5rem;
+        background: #fff;
+        color: #8b3434;
+        border: 1px solid #8b3434;
+        border-radius: .3rem;
+        transition: all ease 0.5s;
+        cursor: pointer;
+
+        &:hover {
+            background: #8b3434;
+            color: #fff;
+            transition: all ease 0.5s;
+        }
+    }
 
     &__event {
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-columns: repeat(20, 1fr);
-        grid-template-rows: 1fr;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 3rem 1fr;
 
         &-s1 {
-            grid-column: 2/8;
-            grid-row: 1/2;
+            grid-column: 1/2;
+            grid-row: 2/3;
             // background: green;
             width: 100%;
             height: 100%;
@@ -33,8 +74,8 @@
 
 
         &-s2 {
-            grid-column: 8/14;
-            grid-row: 1/2;
+            grid-column: 2/3;
+            grid-row: 2/3;
             width: 100%;
             height: 100%;
             padding: 10px;
@@ -44,50 +85,16 @@
         }
 
         &-s3 {
-            grid-column: 14/20;
-            grid-row: 1/2;
+            grid-column: 3/4;
+            grid-row: 2/3;
             width: 100%;
             height: 100%;
             padding: 1rem;
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 60px 60px 60px 60px 60px 60px;
+            grid-template-rows: 60px 60px 60px 60px 60px 30px;
 
-            &-btn-success {
-                height: 3rem;
-                font-size: 1.5rem;
-                background: #fff;
-                color: #3a8b34;
-                border: 1px solid #3a8b34;
-                border-radius: .3rem;
-                transition: all ease 0.5s;
-                cursor: pointer;
-
-                &:hover {
-                    background: #3a8b34;
-                    color: #fff;
-                    transition: all ease 0.5s;
-                }
-            }
             
-            
-            
-            &-btn-alert {
-                height: 3rem;
-                font-size: 1.5rem;
-                background: #fff;
-                color: #8b3434;
-                border: 1px solid #8b3434;
-                border-radius: .3rem;
-                transition: all ease 0.5s;
-                cursor: pointer;
-
-                &:hover {
-                    background: #8b3434;
-                    color: #fff;
-                    transition: all ease 0.5s;
-                }
-            }
         }
     }
 }
@@ -132,8 +139,15 @@
 
     &-text {
         display: block;
-        font-size: 0.7rem;
+        font-size: 1.5rem;
         font-family: $font-title;
+        // text-align: right;
+    }
+    &-textPayment {
+        display: block;
+        font-size: 1.5rem;
+        font-family: $font-info;
+        text-align: right;
     }
 
     &-textarea {
