--- a/src/components/admin/Event/NewEventForm/NewEventForm.scss
+++ b/src/components/admin/Event/NewEventForm/NewEventForm.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/style.scss';
+@import "../../../../styles/style.scss";
 
 :root {
     --form-grid: 70px 70px 70px 70px 70px 70px;
@@ -8,18 +8,62 @@
     height: 100%;
     width: 100%;
     display: inherit;
+    position: relative;
+
+    &__btn-success {
+        position: absolute;
+        top: 0;
+        right: 0;
+        // display: none;
+        height: 30px;
+        font-size: 1.5rem;
+        background: #fff;
+        color: #3a8b34;
+        border: 1px solid #3a8b34;
+        border-radius: 3px;
+        transition: all ease 0.5s;
+        cursor: pointer;
+
+        &:hover {
+            background: #3a8b34;
+            color: #fff;
+            transition: all ease 0.5s;
+        }
+    }
+
+    &__btn-alert {
+        position: absolute;
+        top: 0;
+        left: 0;
+        // display: none;
+        height: 30px;
+        font-size: 1.5rem;
+        background: #fff;
+        color: #8b3434;
+        border: 1px solid #8b3434;
+        border-radius: 3px;
+        transition: all ease 0.5s;
+        cursor: pointer;
+
+        &:hover {
+            background: #8b3434;
+            color: #fff;
+            transition: all ease 0.5s;
+        }
+    }
 
     &__event {
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-columns: repeat(20, 1fr);
-        grid-template-rows: 1fr;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 3rem 1fr;
+
+        
 
         &-s1 {
-            grid-column: 2/8;
-            grid-row: 1/2;
-            // background: green;
+            grid-column: 1/2;
+            grid-row: 2/3;
             width: 100%;
             height: 100%;
             padding: 10px;
@@ -29,10 +73,9 @@
             padding-bottom: 50px;
         }
 
-
         &-s2 {
-            grid-column: 8/14;
-            grid-row: 1/2;
+            grid-column: 2/3;
+            grid-row: 2/3;
             width: 100%;
             height: 100%;
             padding: 10px;
@@ -42,49 +85,50 @@
         }
 
         &-s3 {
-            grid-column: 14/20;
-            grid-row: 1/2;
+            grid-column: 3/4;
+            grid-row: 2/3;
             width: 100%;
             height: 100%;
             padding: 10px;
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 60px 60px 60px 60px 60px 60px;
+            grid-template-rows: 60px 60px 60px 23rem;
 
-            &-btn-success {
-                height: 30px;
-                font-size: 1.5rem;
-                background: #fff;
-                color: #3a8b34;
-                border: 1px solid #3a8b34;
-                border-radius: 3px;
-                transition: all ease 0.5s;
-                cursor: pointer;
+            &-payment {
+                border: 0.5rem solid #3a8b34;
+                height: 100%;
+                overflow-y: auto;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                
 
-                &:hover {
+                legend {
+                    padding: 0 0.5rem;
+                    font-family: $font-title;
+                    text-transform: uppercase;
+                    color: #3a8b34;
+                }
+
+                button {
                     background: #3a8b34;
                     color: #fff;
-                    transition: all ease 0.5s;
-                }
-            }
-            
-            &-btn-alert {
-                height: 30px;
-                font-size: 1.5rem;
-                background: #fff;
-                color: #8b3434;
-                border: 1px solid #8b3434;
-                border-radius: 3px;
-                transition: all ease 0.5s;
-                cursor: pointer;
+                    border: none;
+                    outline: none;
+                    width: 100%;
+                    border-radius: 0 5px 0 5px;
+                    padding: 5px;
+                    cursor: pointer;
 
-                &:hover {
-                    background: #8b3434;
-                    color: #fff;
-                    transition: all ease 0.5s;
+                    &:hover {
+                        color: #ccdf23;
+                        outline: .1rem solid #ccdf23;
+                    }
                 }
             }
         }
+
+        
     }
 }
 
@@ -94,25 +138,27 @@
 }
 
 .section__input-group {
-
-    input, select {
+    input,
+    select {
         width: 100%;
         outline: none;
         border: none;
-        border-bottom: 1.5px solid #ffffff;
+        // border-bottom: 1.5px solid #ffffff;
         background: #e7e7e7;
         border-radius: 0 5px 0 5px;
         padding: 5px;
+        
 
         &:hover {
             border: 1.5px solid #dc143c;
             box-shadow: 0px 0px 5px 0px #dc143c;
+            
         }
-        
+
         &:focus {
             border: 1.5px solid #dc143c;
             box-shadow: 0px 0px 5px 2px #dc143c;
-            transition: box-shadow .5s ease-out;
+            transition: box-shadow 0.5s ease-out;
         }
     }
 
@@ -132,6 +178,12 @@
         font-size: 1.5rem;
         font-family: $font-info;
     }
+    &-textPayment {
+        display: block;
+        font-size: 1.5rem;
+        font-family: $font-info;
+        text-align: right;
+    }
 
     &-textarea {
         width: 100%;
@@ -148,11 +200,11 @@
             border: 1.5px solid #dc143c;
             box-shadow: 0px 0px 5px 0px crimson;
         }
-        
+
         &:focus {
             border: 1.5px solid #dc143c;
             box-shadow: 0px 0px 5px 2px crimson;
-            transition: box-shadow .5s ease-out;
+            transition: box-shadow 0.5s ease-out;
         }
     }
 
@@ -169,11 +221,11 @@
             border: 1.5px solid #dc143c;
             box-shadow: 0px 0px 5px 0px #dc143c;
         }
-        
+
         &:focus {
             border: 1.5px solid #dc143c;
             box-shadow: 0px 0px 5px 2px #dc143c;
-            transition: box-shadow .5s ease-in;
+            transition: box-shadow 0.5s ease-in;
         }
     }
 }
@@ -182,10 +234,5 @@
     text-align: center;
 }
 
-
-
-
-
-
-
-
+@media screen and (max-width: 600px) {
+}
