--- a/src/components/admin/menu/Header/Today/Today.scss
+++ b/src/components/admin/menu/Header/Today/Today.scss
@@ -68,95 +68,11 @@
                 }
             }
         }
+    }
+}
 
-        
-        // &-title {
-        //     border: 0.3rem solid $color-first;
-        //     display: flex;
-        //     justify-content: center;
-        //     align-items: center;
-        //     border: none;
-        //     outline: none;
-        //     width: 10rem;
-        //     height: 100%;
-        //     background-position: center;
-        //     background-repeat: no-repeat;
-        //     background-size: cover;
-            
-        //     h1 {
-                
-        //         font-size: 3rem;
-        //         font-weight: bold;
-        //         color: #fff;
-        //         text-align: center;
-        //     }
-        // }
-
-        // &-event {
-        //     width: 100%;
-        //     height: 100%;
-        //     display: flex;
-        //     flex-direction: column;
-        //     padding: 0 1rem;
-            
-
-        //     &-title {
-        //         font-family: $font-title;
-        //         margin: 0;
-        //         width: 100%;
-        //         flex-grow: .5;
-        //         color: #fff;
-        //         text-align: center;
-        //     }
-
-        //     &-info {
-        //         width: 100%;
-        //         flex-grow: 1;
-        //         display: flex;
-        //         align-items: stretch;
-        //         padding-left: .3rem;
-
-        //         &-first {
-        //             width: 50%;               
-        //             color: #fff;
-                    
-        //             p {
-        //                 margin: 0;
-        //             }
-
-        //         }
-
-        //         &-second {
-        //             flex-grow: 6;
-        //             width: 50%;
-        //             padding: 0 .3rem;
-        //             color: #fff;
-
-        //             &-estimated {
-        //                 display: flex;
-        //                 justify-content: space-between;
-        //             }
-
-        //             &-contact {
-        //                 display: flex;
-        //                 justify-content: space-between;
-        //             }
-
-        //             p {
-        //                 margin: 0;
-        //             }
-        //         }
-        //     }
-
-        //     &-free {
-        //         font-family: $font-info;
-        //         width: 100%;
-        //         height: 100%;
-        //         display: flex;
-        //         justify-content: center;
-        //         align-items: center;
-        //         color: #fff;
-        //     }
-        // }
+@media screen and ( max-width: 600px ){
+    .today {
+        display: none;
     }
 }
