--- a/src/components/admin/menu/Sidebar/Sidebar.scss
+++ b/src/components/admin/menu/Sidebar/Sidebar.scss
@@ -28,15 +28,6 @@
         margin-top: auto;
     }
 
-    // .sidebar__item {
-    //     display: inline;
-    //     visibility: hidden;
-    //     width: 150px;
-    //     height: 50px;
-    //     background-color: #312f2f;
-    //     color: #fff;
-    // }
-
     &__icon {
         // width: 50px;
         font-size: 25px;
@@ -55,3 +46,36 @@
 }
 
 // MÉTODO RESPONSIVE
+@media screen and ( max-width: 600px ) {
+    .sidebar {
+        width: 100vw;
+        height: 7vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0;
+
+        &__icon-group {
+            width: 100%;
+            text-align: center;
+            height: 100%;
+            transition: all 0.5s linear;
+        }
+        
+        &__icon-group-logout {
+            display: none;
+            height: 0;
+            margin: 0;
+        }
+
+        &__icon {
+            font-size: 2.5rem;
+            color: #fff;
+        }
+
+        &__icon-calendar {
+            font-size: 2.5rem;
+        }
+    }
+}
