--- a/src/layouts/LayoutBasic.scss
+++ b/src/layouts/LayoutBasic.scss
@@ -4,7 +4,7 @@
     --shadow: 3px 3px 10px 3px #03030323;
 }
 
-.admin__container {
+.admin-container {
     display: grid;
     width: 100vw;
     height: 100vh;
@@ -12,49 +12,62 @@
     outline: 3px solid #000;
     grid-template-columns: 70px 1fr;
     align-items: center;
+
+    &__sidebar {
+        grid-column: 1/2;
+    }
+
+    &__main {
+        grid-column: 2/3;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(24, 1fr);
+        grid-template-rows: 100px 10px 1fr 20px;
+        height: 100vh;
+        background: #fff;
+
+        &-header {
+            grid-column: 2/24;
+            grid-row: 1/2;
+            background: transparent;
+            width: 100%;
+            height: 100%;
+            // box-shadow: var(--shadow);
+        }
+
+        &-body {
+            grid-column: 2/24;
+            grid-row: 3/4;
+            background: #fff;
+            width: 100%;
+            height: 100%;
+            min-height: 30rem;
+            box-shadow: 1px 1px 15px 1px #dc143c;
+            overflow: hidden;
+        }
+    }
 }
 
-.admin__sidebar {
-    grid-column: 1/2;
-}
+@media screen and ( max-width: 600px ) {
+    .admin-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
 
-.admin__main {
-    grid-column: 2/3;
-    align-items: center;
-    display: grid;
-    grid-template-columns: repeat(24, 1fr);
-    grid-template-rows: 100px 10px 1fr 20px;
-    height: 100vh;
-    background: #fff;
-}
+        &__sidebar {
+            grid-column: 1/2;
+            grid-row: 2/3;
+        }
 
-.admin__header {
-    grid-column: 2/24;
-    grid-row: 1/2;
-    background: transparent;
-    width: 100%;
-    height: 100%;
-    // box-shadow: var(--shadow);
-}
-
-.admin__header-info {
-    grid-column: 12/24;
-    grid-row: 1/2;
-    background: #fff;
-    width: 100%;
-    height: 100%;
-    box-shadow: var(--shadow);
-}
-
-.admin__body {
-    grid-column: 2/24;
-    grid-row: 3/4;
-    background: #fff;
-    width: 100%;
-    height: 100%;
-    min-height: 30rem;
-    box-shadow: 1px 1px 15px 1px #dc143c;
-    overflow: hidden;
-    // margin: 5px;
-    // margin-bottom: 15px;
+        &__main {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            height: 93vh;
+            
+            &-body {
+                // display: none;
+                overflow-y: scroll;
+            }
+        }
+    }
 }
