--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -46,3 +46,19 @@
         }
     }
 }
+
+@media screen and ( max-width: 600px ){
+    .auth__container {
+        width: 100%;
+        height: 50rem;
+
+        &-card {
+            border-radius: 0;
+            padding: 1rem;
+
+            &-logo {
+                width: 100vw;
+            }
+        }
+    }
+}
