--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -28,3 +28,28 @@
     }
 }
 
+@media screen and ( max-width: 600px ){
+    .home {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 50rem 25rem 25rem;
+        height: 100rem;
+        width: 100%;
+
+        &__s1 {
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+    
+        &__s2 {
+            grid-column: 1/2;
+            grid-row: 2/3;
+        }
+    
+        &__s3 {
+            grid-column: 1/2;
+            grid-row: 3/4;
+        }
+    }
+}
+
