finance and request

--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -16,12 +16,12 @@
         padding: 0.1px;
         height: 100vh;
         overflow: hidden;
-        color: #660909d8;
+        color: #ffffffd8;
 
         &-card {
             width: 600px;
             height: 500px;
-            background: #fff;
+            background: rgb(255, 255, 255);
             padding: 12px;
             margin: 50px auto;
             border-radius: 5px;
