--- a/src/pages/Request/Request.scss
+++ b/src/pages/Request/Request.scss
@@ -1,5 +1,16 @@
 @import '../../styles/style.scss';
 
 .request {
-    
+    width: 100%;
+    height: 100%;
+    border: 5px solid #000;
+    padding: .5rem;
+    overflow-y: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // gap: 1rem;
+    // justify-content: space-between;
 }
